src/test/ui/nll/maybe-initialized-drop-with-uninitialized-fragments.stderr
error[E0506]: cannot assign to `x` because it is borrowed (Ast)
  --> $DIR/maybe-initialized-drop-with-uninitialized-fragments.rs:32:5
   |
27 |     let wrap = Wrap { p: &mut x };
   |                               - borrow of `x` occurs here
...
32 |     x = 1; // OK, drops are inert
   |     ^^^^^ assignment to borrowed `x` occurs here

error[E0506]: cannot assign to `x` because it is borrowed (Mir)
  --> $DIR/maybe-initialized-drop-with-uninitialized-fragments.rs:32:5
   |
27 |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
...
32 |     x = 1; // OK, drops are inert
   |     ^^^^^ assignment to borrowed `x` occurs here

error: aborting due to 2 previous errors

